tests/ui/parser/issues/issue-57198.stderr
error: expected identifier, found keyword `for`
  --> $DIR/issue-57198.rs:6:8
   |
LL |     m::for();
   |        ^^^ expected identifier, found keyword
   |
help: escape `for` to use it as an identifier
   |
LL |     m::r#for();
   |        ++

error: aborting due to 1 previous error

