tests/ui/parser/issues/issue-57198.rs
mod m {
    pub fn r#for() {}
}

fn main() {
    m::for();
    //~^ ERROR expected identifier, found keyword `for`
}
